# softrender

./: .clang-format  CMakeLists.txt  LICENSE  readme.txt
src/common/: Vector2.hpp
src/core/: CoreApp.cpp  CoreApp.hpp
src/input/: InputManager.cpp  InputManager.hpp
src/objects/: GameObject.cpp  GameObject.hpp
src/platform/osx/: main.mm
src/render/: Framebuffer.cpp  Framebuffer.hpp  Rectangle.cpp  Rectangle.hpp  Sprite.hpp  TextRender.cpp  TextRender.hpp
src/scenes/: MainMenuScene.cpp  MainMenuScene.hpp  TitleScene.cpp  TitleScene.hpp
src/state/: GameState.hpp  StateMachine.cpp  StateMachine.hpp
